--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,15 +1,15 @@
-# JitPack 构建配置
+# JitPack build configuration
 jdk:
   - openjdk21
 
-# 构建前脚本
+# Pre-build script
 before_install:
-  - echo "开始构建 CNMoney 插件..."
+  - echo "Starting CNMoney plugin build..."
 
-# 构建脚本
+# Build script
 install:
   - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=false -B -V
 
-# 环境变量
+# Environment variables
 env:
-  - MAVEN_OPTS="-Xmx1024m"
+  MAVEN_OPTS: "-Xmx1024m"
